# IPanalysis

./: .gitignore  CLAUDE.md  README.md  aggregation.py  analysis_advanced.py  app.py  cached_agg.py  chart_utils.py  charts.py  charts_advanced.py  constants.py  data_processing.py  example_analysis.py  name_mapping.json  patent_analysis.py  pyproject.toml  requirements.txt  sidebar.py  styles.py
archive/: README.md
archive/example/: main_gui_embed_scrollable_copy_and_rename.py
archive/example/scripts/: applicant_count.py  applicant_total.py  application_trend.py  citation_map.py  cited_applications.py  entry_exit_chart.py  ipc_growth.py  ipc_main_group.py  ipc_summary.py  patent_cleaner.py  出願増減率.py
excel_sample/: 非水電解質電池.xlsx
slides/: generate_pptx.py  lt-presentation.html  lt-presentation.pptx  slide-content-lt.md  slide-content.md
tests/: conftest.py  test_advanced_analysis.py  test_analysis.py  test_chart_utils.py  test_cleaning.py  test_styles.py
tests/e2e/: conftest.py  test_app.py
