[project]
name = "ipanalysis"
version = "0.1.0"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "e2e: End-to-end tests requiring Playwright and a running Streamlit server",
]
